--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.55.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "three": "^0.143.0",
+    "yuka": "^0.7.7"
   },
   "scripts": {
     "start": "react-scripts start",
